--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap');
 
-
 * {
     margin: 0;
     padding: 0;
@@ -46,7 +45,7 @@ section {
 }
 
 main #screen {
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-weight: 700;
     padding: 24px;
     width: 100%;
@@ -72,11 +71,19 @@ main #btn-container .digit-btn {
     --shadow-color: hsl(28, 16%, 65%);
 }
 
+main #btn-container .digit-btn:hover {
+    background-color: hsl(0, 100%, 100%);
+}
+
 main #btn-container #del-btn {
     --text-size: 1.2rem;
     --text-color: hsl(0, 100%, 100%);
     --bg-color: hsl(225, 21%, 49%);
     --shadow-color: hsl(224, 28%, 35%);
+}
+
+main #btn-container #del-btn:hover {
+    background-color: hsl(225, 21%, 65%);
 }
 
 main #btn-container #reset-btn {
@@ -87,6 +94,11 @@ main #btn-container #reset-btn {
     --shadow-color: hsl(224, 28%, 35%);
 }
 
+main #btn-container #reset-btn:hover {
+    background-color: hsl(225, 21%, 65%);
+}
+
+
 main #btn-container #operator-btn {
     grid-column: 3 / 5;
     --text-size: 1.2rem;
@@ -95,14 +107,19 @@ main #btn-container #operator-btn {
     --shadow-color: hsl(6, 70%, 34%);
 }
 
+main #btn-container #operator-btn:hover {
+    background-color: hsl(6, 63%, 59%);
+}
+
 main #btn-container button {
     font-size: var(--text-size);
     font-weight: 700;
     color: var(--text-color);
     background-color: var(--bg-color);
     text-align: center;
+    user-select: none;
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    box-shadow: 0px 4px var(--shadow-color);
+    box-shadow: 0px 3px var(--shadow-color);
 }    
