--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ main #screen {
 main #btn-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     gap: 20px;
     width: 100%;
     height: 22rem;
