--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ main #btn-container #reset-btn {
     grid-column: 1 / 3;
 }
 
-main #btn-container #operator-btn {
+main #btn-container #equal-btn {
     grid-column: 3 / 5;
     --text-size: 1.2rem;
     --text-color: hsl(0, 100%, 100%);
@@ -102,7 +102,7 @@ main #btn-container #operator-btn {
     --shadow-color: hsl(6, 70%, 34%);
 }
 
-main #btn-container #operator-btn:hover {
+main #btn-container #equal-btn:hover {
     background-color: hsl(6, 63%, 59%);
 }
 
