--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ main #btn-container {
     grid-template-rows: repeat(5, 1fr);
     gap: 20px;
     width: 100%;
-    height: 22rem;
+    height: 24rem;
     padding: 24px 24px;
     background-color: hsl(223, 31%, 20%);
 }
@@ -149,10 +149,13 @@ main #btn-container button {
     main {
         display: block;
     }
-
     
     main #header #theme-container {
         gap: 1.5rem;
+    }
+
+    main #btn-container {
+        height: 28rem;
     }
 }
 
@@ -169,7 +172,6 @@ main #btn-container button {
     main #display-section #calculator-display {
         border-radius: 4px;
     }
-
 
     main #header #theme-container h4 {
         font-size: 0.5rem;
